# atlas-man

./: LICENSE  README.md  requirements.md  setup.cfg
.github/workflows/: release.yml
src/: config.py
src/atlasman/: __main__.py  config.py  confluence_commands.py  jira_commands.py  trello_commands.py
src/atlasman/constants/: jira_field_types.py
