[metadata]
name = atlas-man
version = 0.1.1
author = Tyler Woodfin
author_email = feedback-atlas-man@tyler.cloud
description = A CLI tool for managing Trello and Jira
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/atlas-man
project_urls =
bug tracker = https://github.com/tylerjwoodfin/atlas-man/issues
py_modules=["atlasman"]
classifiers =
programming language :: Python :: 3
license :: OSI Approved :: MIT License
operating system :: OS Independent
[options]
package_dir =
    = src

packages = find:
python_requires = >=3.6
[options.packages.find]
where = src
include = atlasman*

[options.entry_points]
console_scripts =
    atlasman=atlasman.__main__:main