[metadata]
name = atlas-man
version = 0.2.0
author = Tyler Woodfin
author_email = feedback-atlas-man@tyler.cloud
description = A CLI tool for managing Trello and Jira
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tylerjwoodfin/atlas-man
project_urls =
    Bug Tracker = https://github.com/tylerjwoodfin/atlas-man/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = file: requirements.md

[options.packages.find]
where = src
include = atlasman*

[options.entry_points]
console_scripts =
    atlasman=atlasman.__main__:main
